# aws-cpp-developer-guide

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  README.rst  build_docs.py  dependencies.txt
doc_source/: _includes.txt  async-methods.md  async-methods.rst  basic-use.md  basic-use.rst  build-cmake.md  build-cmake.rst  build-vcpkg.md  client-config.md  client-config.rst  cloudwatch-logs_DeleteSubscriptionFilter_cpp_topic.md  cloudwatch-logs_DescribeSubscriptionFilters_cpp_topic.md  cloudwatch-logs_PutSubscriptionFilter_cpp_topic.md  cloudwatch_DeleteAlarms_cpp_topic.md  cloudwatch_DescribeAlarmsForMetric_cpp_topic.md  cloudwatch_DisableAlarmActions_cpp_topic.md  cloudwatch_EnableAlarmActions_cpp_topic.md  cloudwatch_ListMetrics_cpp_topic.md  cloudwatch_PutMetricAlarm_cpp_topic.md  cloudwatch_PutMetricData_cpp_topic.md  cmake-params.md  cmake-params.rst  conf.py  configuring-iostreams.md  configuring-iostreams.rst  configuring.md  configuring.rst  cpp_cloudwatch-logs_code_examples.md  cpp_cloudwatch_code_examples.md  cpp_code_examples.md  cpp_code_examples_categorized.md  cpp_dynamodb_code_examples.md  cpp_eventbridge_code_examples.md  cpp_s3_code_examples.md  cpp_sns_code_examples.md  credentials.md  credentials.rst  data-protection.md  data-protection.rst  document-history.md  (+151 more)
doc_source/examples/: examples-note.txt  s3.rst
doc_source/examples/s3/: buckets.rst  objects.rst
doc_source/includes/: complete-examples-note.txt  examples-note.txt
doc_source/snippets/hellos3/: CMakeLists.txt  hellos3.cpp
